--- a/success.html
+++ b/success.html
@@ -18,8 +18,8 @@
 		<h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
 	</header>
 
-	<div class="main-content">
-		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
+	<div class="main-content" style="background-image: url(public/email-3249062_1280.png);">
+		<i class="fa fa-check main-content__checkmark" id="checkmark" style="color: cornflowerblue;"></i>
 		<p class="main-content__body" data-lead-id="main-content-body">Thanks a bunch for filling that out. It means a lot to us, just like you do!.Thanks for using our Application!</p>
 	</div>
 
